package com;

public class MultiplicadorX1 implements Multiplicador{
    @Override
    public int multiplicar(int puntaje){
        return puntaje;
    }
}
