@startuml

skinparam monochrome true
hide circle
skinparam classAttributeIconSize 0

title "Multiplicador"

class Multiplicador {
    + multiplicar(puntaje:Puntaje): Puntaje
}

class MultiplicadorX1 {
    + multiplicar(puntaje:Puntaje): Puntaje
}

class MultiplicadorX2 {
    + multiplicar(puntaje:Puntaje): Puntaje
}

class MultiplicadorX3 {
    + multiplicar(puntaje:Puntaje): Puntaje
}

class Puntaje {
    - valor:int
    + Puntaje(puntaje:int)
    + multiplicarseCon(otroPuntaje:Puntaje):Puntaje
    + sumarseCon(otroPuntaje:Puntaje):Puntaje
    + valorNumerico():int
    + equals(Object o):boolean
    + hashCode():int
}

Multiplicador <<Interface>>
Multiplicador <|.. MultiplicadorX1
Multiplicador <|.. MultiplicadorX2
Multiplicador <|.. MultiplicadorX3
Multiplicador .right.> Puntaje



@enduml